tests/error/voidExpression.tpc
void test(void){
	return ;
}

int main(void){
	int i;
	i=test();
	return 1;
}